fix unit attribute wrapping and added unit tag

--- a/src/app/unit/unit.component.sass
+++ b/src/app/unit/unit.component.sass
@@ -27,14 +27,19 @@
 
 .strength
   color: red
+  flex: 0 0 auto
   margin-right: 5px
 
 .defense
   margin-right: 5px
-  flex: 1
+  flex: 0 0 auto
+
+.attributes
+  color: red
+  display: flex
+  flex-wrap: wrap
 
 .attribute
-  color: red
   margin-right: 5px
 
 .description
